# sandbox

./: README.md
aurash/: .gitignore  .gitignore~  README.md  README.md~
aurash/CLIPS/: clptest.py  retest.py  savefacts.txt
aurash/FaceRecognizer/: data.txt  data.txt~  test.py  testcv2.py
aurash/ROS/: maindemo.py  pyhandtracker.py  servoSpin.py
aurash/SerialStepper/: pyjoy.py  serialStepper.ino  servospin.py
aurash/landmarking/: Asr.py  \dev\null  dlibpython.py  faceRec.py  kinectTest.py  landmark.py  landmarking.py  landmarks_over_video.py  listener.py  pyasm.py  pyhandtracker.py  skeleton.py
aurash/ros_py_openni/: CMakeLists.txt  CMakeLists.txt~  package.xml~  rospyopenni.py
aurash/speech_recognition/: Asr.py  \dev\null  pypoc_nora.py  sttpub.py  sttsub.py
aurash/vfacerec/: VRec1.0.py  model.pkl
dalton/FaceRecognizer/: data.txt  data.txt~  test.py
dalton/facerecognition/: Asr.py  landmarks_over_video.py
dalton/mirror/: package-lock.json  package.json  package.json~  styles.css  window.js
dalton/vfacerec/: CMakeLists.txt~  VRec1.0 (copy).py  VRec1.0.py  model.pkl  package.xml~  ros_py_openni.py
dalton/vfacerec2/: facerec.py  facetrain.py
dalton/vfacerecOld/: VRec1.0.py  VRec1.0c.py
hand_tracking/: Jive.cpp
jpham18/Full Integration/: main.py
jpham18/Hand Tracking/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Jive.cpp  Jive.h  KinectDetection  (+5 more)
larry/: README.md
ros_rp2w/: CMakeLists.txt  CMakeLists.txt~  package.xml
scottcao/: face_detect.py
scottcao/ICP/Capture/: CMakeLists.txt  OpenNICapturer.cpp  OpenNICapturer.h  OpenNICapturer.h~  PCDWriter.cpp  PCDWriter.h  main.cpp
scottcao/ICP/Registration/: CMakeLists.txt  CustomCloud.cpp  CustomCloud.h  PCDWriter.cpp  Registration.cpp  Registration.h  main.cpp
scottcao/ICP1/Capture/: CMakeLists.txt  CustomCloud.cpp  CustomCloud.h  OpenNICapturer.cpp  OpenNICapturer.h  Registration.cpp  Registration.h  capture.cpp  main.cpp
(+572 files in other folders)
